# pythonette-42

./: .gitignore  CONTRIBUTING.md  README.md  install.sh  pyproject.toml
pythonette/: __main__.py  cli.py  detector.py  executor.py  printer.py  runner.py  updater.py
pythonette/checkers/: execution.py  style.py
pythonette/checks/: __init__.py  ast_checks.py  base.py  declarative.py  runtime.py  scripted.py  static.py
pythonette/subjects/: __init__.py  module_00.py  module_01.py  module_02.py  module_03.py  module_04.py  module_05.py  module_06.py  module_07.py  registry.py
