[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pythonette"
version = "0.1.0"
description = "Test automation framework for 42 Python modules."
requires-python = ">=3.10"
dependencies = [
    "rich>=13",
    "flake8>=6",
    "mypy>=1.8",
]

[project.scripts]
pythonette = "pythonette.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pythonette*"]
